test/conformance/chainsaw/verify-manifests/multi-signatures/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-yaml
spec:
  background: false  
  rules:
    - name: validate-yaml
      match:
        any:
        - resources:
            kinds:
            - Service
      validate:
        failureAction: Enforce
        manifests:
          attestors:
          - entries:
            - keys:
                publicKeys: |-
                    -----BEGIN PUBLIC KEY-----
                    MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEyQfmL5YwHbn9xrrgG3vgbU0KJxMY
[...]
                    -----END PUBLIC KEY-----
                rekor:
                  url: https://rekor.sigstore.dev
                  ignoreTlog: true
                ctlog:
                  ignoreSCT: true
            - keys:
                publicKeys: |-
                    -----BEGIN PUBLIC KEY-----
                    MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEE8uGVnyDWPPlB7M5KOHRzxzPHtAy
[...]
                    -----END PUBLIC KEY-----
                rekor:
                  url: https://rekor.sigstore.dev
                  ignoreTlog: true
                ctlog:
                  ignoreSCT: true
  webhookConfiguration:
    timeoutSeconds: 30
    failurePolicy: Fail
