test/conformance/chainsaw/verify-manifests/multi-signatures/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-yaml
status:
  conditions:
    - reason: Succeeded
      status: "True"
      type: Ready
