test/conformance/chainsaw/verify-manifests/multi-signatures/02-resources.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: resources
spec:
  timeouts: {}
  try:
  - apply:
      check:
        (error != null): true
      file: resource-no-signature.yaml
  - apply:
      check:
        (error != null): true
      file: resource-one-signature.yaml
  - apply:
      file: resource-two-signatures.yaml
  - apply:
      check:
        (error != null): true
      file: resource-bad-signatures.yaml
